--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "3.0.0",
+    "@ionic-native/camera": "^5.33.1",
+    "@ionic-native/core": "^5.33.1",
+    "@ionic-native/file": "^5.33.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-camera": "^5.0.2",
+    "cordova-plugin-file": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
