--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/camera": "^5.33.1",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/file": "^5.33.1",
+    "@ionic-native/firebase": "^5.34.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-camera": "^5.0.2",
     "cordova-plugin-file": "^6.0.2",
